# power-profiles-daemon-tlp

./: .gitlab-ci.yml  .pre-commit-config.yaml  NEWS  README.md  install.txt  meson.build  meson.build~  meson_options.txt
data/: codespell.cfg  meson.build  power-profiles-daemon.dbus.service.in  power-profiles-daemon.policy  power-profiles-daemon.service.in
rpm/: ppd-tlp.spec
src/: meson.build  net.hadess.PowerProfiles.xml.in  org.freedesktop.UPower.PowerProfiles.xml.in  power-profiles-daemon.c  power-profiles-daemon.c~  power-profiles-daemon.h  powerprofilesctl  ppd-action-amdgpu-dpm.c  ppd-action-amdgpu-panel-power.c  ppd-action-trickle-charge.c  ppd-action.c  ppd-action.h  ppd-driver-amd-pstate.c  ppd-driver-fake.c  ppd-driver-intel-pstate.c  ppd-driver-platform-profile.c  ppd-driver-pwrmdr.c  ppd-driver-pwrmdr.h  ppd-driver-tlp.c  ppd-driver-tlp.h  ppd-driver-tlpmm.c  ppd-driver-tlpmm.h  ppd-driver.c  ppd-driver.h  ppd-profile.c  ppd-profile.h  ppd-utils.c  ppd-utils.h
src/completions/: meson.build
tests/: integration_test.py  meson.build
